# openrave

./: AUTHORS
plugins/: CMakeLists.txt
plugins/ikfastsolvers/: ik_irp6_postument.cpp  ikfastsolvers.cpp
plugins/irp6kinematic/: CMakeLists.txt  irp6kinematic.cpp  irp6kinematic.h
python/: CMakeLists.txt  irp6kinematic.py
src/data/: conveyor.kinbody.xml  cube.kinbody.xml
src/robots/: irp6.both.robot.xml  irp6both.dae
